# ConstructEye

./: README.md
PointNet_Training_And_Testing/: train.py
PointNet_Training_And_Testing/data/: Readme.txt
PointNet_Training_And_Testing/data/indoor3d_sem_seg_hdf5_data/: all_files.txt  room_filelist.txt
PointNet_Training_And_Testing/sem_seg/: .train.py.swp  batch_inference.py  gen_indoor3d_h5.py  gen_indoor3d_h5_modify_area5.py  indoor3d_util_single.py  load_npy.py  model.py  train.py  train_bkup.py
PointNet_Training_And_Testing/sem_seg/meta/: area6_data_label_single.txt  area6_single_data_label.txt
sensing_system_ws/: models_readme.txt
sensing_system_ws/src/indoor_scan/: CMakeLists.txt  package.xml
sensing_system_ws/src/indoor_scan/msg/: PointCloudDetections.msg
sensing_system_ws/src/indoor_scan/reference_models/: reference_model_1.npy
sensing_system_ws/src/indoor_scan/scripts/: analyse_model.py
sensing_system_ws/src/indoor_scan/scripts/DNN_Inference/: inference.py  inference_kd_search.py
sensing_system_ws/src/indoor_scan/scripts/tools/: check_npy.py  load_npy.py  visualise_pred_npy.py  visualise_pred_txt.py
